# Thermocouple

./: .gitignore  CMakeLists.txt  README.md  main.c
inc/: thermocouple.h
src/: thermocouple.c
src/Tables/: K_Type.c
